[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://art/images/buttons/playgame.png" type="Texture" id=2]
[ext_resource path="res://art/images/buttons/dontplaygame.png" type="Texture" id=3]
[ext_resource path="res://art/images/buttons/playgame_pressed.png" type="Texture" id=4]
[ext_resource path="res://art/images/buttons/dontplaygame_pressed.png" type="Texture" id=5]
[ext_resource path="res://art/images/buttons/dontplaygame_hover.png" type="Texture" id=6]
[ext_resource path="res://art/images/buttons/playgame_hover.png" type="Texture" id=7]

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="NewGame" type="Node2D" parent="."]
position = Vector2( 240, 120 )
scale = Vector2( 0.5, 0.5 )

[node name="NewTextButton" type="TextureButton" parent="NewGame"]
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Node2D" parent="."]
position = Vector2( 248, 288 )
scale = Vector2( 0.5, 0.5 )

[node name="OptTextButton" type="TextureButton" parent="Options"]
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="NewGame/NewTextButton" to="." method="_on_NewTextButton_button_up"]
[connection signal="button_up" from="Options/OptTextButton" to="." method="_on_OptTextButton_button_up"]
